# ChangeLog for www-client/opera
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.388 2009/09/08 08:37:37 fauli Exp $

  08 Sep 2009; Christian Faulhammer <fauli@gentoo.org> opera-10.00.ebuild:
  stable x86, security bug 283391

*opera-10.10_pre4594 (05 Sep 2009)

  05 Sep 2009; Jeroen Roovers <jer@gentoo.org> +opera-10.10_pre4594.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2009/09/04/10-10-with-unite>.

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org>
  -files/opera-9.00-install.patch:
  Remove unused patch.

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> -opera-9.27.ebuild:
  Remove opera-9.27 after more than a year.

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> opera-10.00.ebuild:
  Switch to mirror://opera now that mirrors should have synced.

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> -opera-10.00_pre4537.ebuild,
  -opera-10.00_pre4538.ebuild, -opera-10.00_pre4546.ebuild,
  -opera-10.00_pre4562.ebuild:
  Remove old.

*opera-10.00 (01 Sep 2009)

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> +opera-10.00.ebuild:
  Version bump
  <http://my.opera.com/community/blog/2009/08/25/the-adventures-of-odd-even>
  .

  29 Aug 2009; Jeroen Roovers <jer@gentoo.org> opera-10.10_pre4563.ebuild,
  opera-10.10_pre4566.ebuild, +files/opera-localepath.patch:
  Set proper locale path (bug #283128).

*opera-10.00_rc4583 (29 Aug 2009)

  29 Aug 2009; Jeroen Roovers <jer@gentoo.org> opera-10.00_rc4570.ebuild,
  +opera-10.00_rc4583.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2009/08/28/opera-10-0-release-candid
  ate-2>.

*opera-10.00_rc4570 (25 Aug 2009)

  25 Aug 2009; Jeroen Roovers <jer@gentoo.org> +opera-10.00_rc4570.ebuild:
  Version bump
  <http://my.opera.com/desktopteam/blog/2009/08/25/opera-10-0-release-candid
  ate>.

  22 Aug 2009; William Hubbs <williamh@gentoo.org> opera-9.27.ebuild,
  opera-9.64.ebuild:
  fixed dependencies for 231870.
