@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.388 2009/09/08 08:37:37 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera/ChangeLog,v 1.389 2009/09/10 15:17:35 jer Exp $
+
+*opera-10.10_pre4609 (10 Sep 2009)
+
+  10 Sep 2009; Jeroen Roovers <jer@gentoo.org> +opera-10.10_pre4609.ebuild:
+  Version bump <http://my.opera.com/desktopteam/blog/2009/09/10/moar-bilds>.
 
   08 Sep 2009; Christian Faulhammer <fauli@gentoo.org> opera-10.00.ebuild:
   stable x86, security bug 283391
